
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MADV_DONTNEED ;
 int MADV_SEQUENTIAL ;
 int MADV_WILLNEED ;
 int SEEK_CUR ;
 int SEEK_SET ;
 int SIGTERM ;
 int _exit (int) ;
 scalar_t__ _llseek (int ,int,int,int *,int ) ;
 int buf ;
 int csize ;
 int fatal (char*) ;
 int fflush (int ) ;
 int file ;
 int getppid () ;
 int gettimeofday (int *,int *) ;
 int* go ;
 int kill (int ,int ) ;
 int madvise (int ,int ,int ) ;
 int off ;
 int pfd ;
 int printf (char*,...) ;
 int r ;
 int read (int ,int ,int ) ;
 int stdout ;
 int tv1 ;

int start_child(void *arg)
{

 go[0]=0;
 madvise(file, csize, MADV_DONTNEED);
 madvise(file, csize, MADV_SEQUENTIAL);
 gettimeofday(&tv1, ((void*)0));
 read(pfd, buf, 0);

 go[0]=1;
 r = madvise(file, csize, MADV_WILLNEED);
 if(r)
  fatal("madvise");


 if(go[1] == 1 || _llseek(pfd, 0, 0, &off, SEEK_CUR)<0 ) {
  r = _llseek(pfd, 0x7fffffff, 0xffffffff, &off, SEEK_SET);
   if( r == -1 )
    fatal("lseek");
  printf("\n[+] Race won!"); fflush(stdout);
  go[0]=2;
 } else {
  printf("\n[-] Race lost %d, use another file!\n", go[1]);
  fflush(stdout);
  kill(getppid(), SIGTERM);
 }
 _exit(1);

return 0;
}
